# gamedev-with-raylib

./: .clang-format  .clangd  .clangd.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  command.sh  exec.sh  index.html  index.js  index.wasm  pre-req.txt  requirements.txt  vcpkg.json
data/: savedata.txt  savedata_old.txt
include/: ball.h  bat.h  brick.h  bricks.h  constants.h  game.h  start_menu.h  utils.h
include/brick_breaker/: ball.h  bat.h  brick.h  bricks.h  game.h
include/stick_fight/: base_stick_figure.h  derived_stick_figure.h  game.h  stick_figure.h
src/: .clangd  CMakeLists.txt  Makefile  ball.cpp  ball.h  bat.cpp  bat.h  brick.cpp  brick.h  bricks.cpp  bricks.h  constants.h  game.cpp  main.cpp
src/brick_breaker/: ball.cpp  bat.cpp  brick.cpp  bricks.cpp  game.cpp
src/include/: start_menu.h
src/include/brick_breaker/: ball.h
src/include/stick_fight/: base_stick_figure.h  game.h
src/resources/: LICENSE
src/stick_fight/: base_stick_figure.cpp  derived_stick_figure.cpp  game.cpp  stick_figure.cpp
