cmake_minimum_required(VERSION 3.12)
project(raylib-cpp-gamedev)
set(CMAKE_CXX_STANDARD 11)
include("/home/disable/vcpkg/scripts/buildsystems/vcpkg.cmake")
find_package(raylib CONFIG REQUIRED)
file(GLOB SOURCES "src/**.cpp")
add_executable(raylib-cpp-gamedev ${SOURCES})
target_link_libraries(raylib-cpp-gamedev PRIVATE raylib)
